plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.zzimcong'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

ext {
    set('springCloudVersion', "2023.0.3")
}

dependencies {
    // Jakarta Bean Validation API
    implementation 'jakarta.validation:jakarta.validation-api:3.0.0'

    // Hibernate Validator (Jakarta Bean Validation 참조 구현체)
    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'

    // Bean Validation을 위한 EL 라이브러리
    implementation 'org.glassfish:jakarta.el:4.0.2'

    // Spring Boot 관련 종속성
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //html
    implementation 'org.springframework:spring-context-support'

    //email
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'com.sun.mail:jakarta.mail:2.0.1'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //mysql
    implementation 'mysql:mysql-connector-java:8.0.32'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    //netflix eureka
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'

    //openfeign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    //kafka
    implementation 'org.springframework.kafka:spring-kafka'

    //custom inventory-core
    implementation 'com.zzimcong:zzimcong-inventory-core:1.0-SNAPSHOT'

    //p6spy
    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
